crates/pattern_cli/src/tui/snapshots/pattern__tui__conversation__tests__renders_text_batch.snap
---
source: crates/pattern_cli/src/tui/conversation.rs
assertion_line: 451
expression: output
---
[you] Hello agent
The answer is 42.
