crates/pattern_cli/src/tui/snapshots/pattern__tui__conversation__tests__scroll_offset_skips_first_batch.snap
---
source: crates/pattern_cli/src/tui/conversation.rs
assertion_line: 505
expression: output
---
[you] Second question
Second answer.
