crates/pattern_cli/src/tui/snapshots/pattern__tui__conversation__tests__thinking_collapsed_shows_summary.snap
---
source: crates/pattern_cli/src/tui/conversation.rs
assertion_line: 463
expression: output
---
[you] Think about this
▸ thinking: Let me consider the options carefully...
I have thought about it.
