crates/pattern_cli/src/tui/snapshots/pattern__tui__conversation__tests__tool_call_collapsed_shows_name.snap
---
source: crates/pattern_cli/src/tui/conversation.rs
assertion_line: 487
expression: output
---
[you] Search for info
▸ tool: search
Found results.
